Fix space between masthead and content on small displays

--- a/src/css/_components.masthead.scss
+++ b/src/css/_components.masthead.scss
@@ -8,7 +8,7 @@
  *     and Droid Serif fonts, respectively.
  */
 .masthead {
-  background: url('../img/wojtek-witkowski-001.jpg') no-repeat center center;
+  background: url('../img/wojtek-witkowski-001.jpg') no-repeat center center fixed;
   background-color: $masthead-bg-color;
   background-size: cover;
   color: $masthead-color;
